tests/ui/repr_c.stderr
error[E0412]: cannot find type `C` in this scope
 --> tests/ui/repr_c.rs:4:8
  |
3 | #[derive(Serialize_repr)]
  |          -------------- similarly named type parameter `S` defined here
4 | #[repr(C)]
  |        ^ help: a type parameter with a similar name exists: `S`
